# ms-hackathon

./: .pre-commit-config.yaml  .ruff.toml  CONTRIBUTING.md  README.md  main.py  pyproject.toml  requirements.txt
internal/: auth.py  config.py  prompt_template.py
routers/: job_matcher.py
schemas/: job_match.py
services/: job_matcher.py
tests/: conftest.py
tests/integration_tests/: test_jobmatchgetapi.py
tests/unit_tests/: test_match_get.py
