[tool.poetry]
name = "ai matcher"
version = "0.1.0"
description = "API for candidate matcher"
authors = ["David <hexod0t@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.4.3"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
pyjwt = "^2.8.0"
uvicorn = "^0.29.0"
gunicorn = "^22.0.0"
google-generativeai = "^0.5.2"
pydantic-settings = "^2.2.1"
pytest = "^8.2.0"
asyncio = "^3.4.3"
aiohttp = "^3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
